# rust-thanos

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  homebrew_formula.rb.tpl  release.yml
src/: lib.rs  main.rs
src/mca/: entry.rs  reader.rs  writer.rs
src/patterns/: inhabited.rs  list.rs  mod.rs  range.rs
src/world/: mod.rs
tests/: inhabited_scan.rs  inplace.rs  lz4.rs  lz4_invalid.rs  progress_modes.rs  threshold.rs  tiny_mca.rs  world.rs
tests/Fixtures/world/DIM-1/entities/: r.0.0.mca
tests/Fixtures/world/DIM1/region/: r.0.0.mca
tests/Fixtures/world/entities/: r.-1.0.mca
tests/Fixtures/world/poi/: r.-1.0.mca
tests/Fixtures/world/region/: r.-1.0.mca
